# ai-indexer

./: .indexer.yaml.example  MELHORIAS_PROJETO.md  README.md  TODOLIST.md  estrutura_projeto.html  estrutura_projeto.json  estrutura_projeto.md  estrutura_projeto.toon  pyproject.toml
.github/workflows/: build-smoke.yml  ci.yml  release.yml
benchmarks/: benchmark_large_repo.py
docs/: IMPLEMENTATION.md
src/ai_indexer/: __init__.py  main.py  version.py
src/ai_indexer.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/ai_indexer/audio_tours/: mixer.py  narrator.py  script_builder.py
src/ai_indexer/core/: architecture.py  cache.py  classification.py  context_builder.py  discovery.py  engine.py  graph.py  models.py  output.py  pipeline.py  scoring.py
src/ai_indexer/exporters/: base.py  html.py  toon.py  xml_exporter.py
src/ai_indexer/mcp/: server.py
src/ai_indexer/parsers/: base.py  python.py  typescript.py
src/ai_indexer/tours/: __init__.py  generator.py
src/ai_indexer/utils/: config.py  io.py  ui.py
templates/nebula/: index.html  nebula.js  styles.css
tests/: test_benchmarks.py  test_cache_regression.py  test_classification_helpers.py  test_cli_smoke.py  test_graph_helpers.py  test_integration_fixtures.py  test_mcp_contracts.py  test_output_snapshots.py  test_repaired_contracts.py
